+fix: bug on mobile device

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -140,12 +140,16 @@ main {
     transition: all 300ms ease;
 }
 
-.links_ico {
+#home .links_ico {
     display: flex;
     flex-direction: row;
     gap: 1.5rem;
     align-items: center;
     justify-content: center;
+
+}
+
+.links_ico {
     cursor: pointer;
 }
 
@@ -157,13 +161,13 @@ main {
     scale: 1.5;
 }
 
-.MiddleContent {
+#home .MiddleContent {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-#moi {
+#home #moi {
     height: 23rem;
     border-radius: 5%;
     cursor: auto;
